static/v2/css/style.css
/* ... */
.sub-nav > .link:hover{
  color: #0075C9;
}

.sub-nav .command{
  display: inline-block;
  color: #000;
  text-transform: none;
  background: #f5f5f5;
  border: 1px solid #ddd;
  padding: 0 6px;
  margin: 3px 0;
  color: #de0e32;
}

.sub-nav > .title{
  color: #999;
  text-transform: uppercase;
  font-size: 12px;
  font-weight: 600;
  margin: 4px 0;
}

/* open sub nav */

.sub-wrap:hover .sub-nav{
  display: block;
}

.command-list{
  margin: 0;
  padding: 0;
  list-style: none;
}

/********************* mobile header ********************/

@media screen and (max-width: 640px){
  .site-header{
  }
  .site-header > .mask{
    display: none;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(0, 0, 0, .5);
  }
  .site-header > .mask.-show{
    display: block;
  }
  .site-header > .hamburger{
    display: block;
  }

  .nav-wrap{
    position: fixed;
    top: 0;bottom: 0;left: 0;
    box-shadow: 0 0 10px rgba(0, 0, 0, .7);
    background: #f5f5f5;
    transition: -webkit-transform .3s ease;
    transition: transform .3s ease;
    transition: transform .3s ease, -webkit-transform .3s ease;
    -webkit-transform: translateX(-100%);
            transform: translateX(-100%);
    min-width: 270px;
    z-index: 1;
  }

  .nav-wrap.-show{
    -webkit-transform: translateX(0);
            transform: translateX(0);
  }

  .site-nav{
    position: absolute;
    top: 66px;
    bottom: 0;
    left: 0;
    right: 0;
    padding-bottom: 50px;
    display: block;
    overflow: auto
  }

  .site-nav > .link{
    display: block;
    text-align: left;
  }

  .site-nav > .link:after{
    content: '>';
    margin-left: 6px;
  }

  .nav-header{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    background: #fff;
    height: 56px
  }

  .nav-header > .close{
    display: block;
    width: 24px;
    height: 24px;
    margin-right: 10px;
    float: right;
    background-color: transparent;
    background-size: 100%;
    background-repeat: no-repeat;
    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAQAAAD9CzEMAAAAW0lEQVR4Ae2WVwGAMBDF2DrO5LmoDIQgBYywl4LOS95/8gNtKwAAb6io+NXPx8Snfjt2JLzpnzm/+lHbovXo0f+B6dMvOlRV6F+LBAkSzvudnOerwvO7CADAAztZR8ZxiHezAQAAAABJRU5ErkJggg==);
  }

  .nav-header > .logo{
    display: block !important;
  }

  /* hide the down arrow */
  .sub-wrap{
  }
  .sub-wrap > .button{
    cursor: default;
    margin: 10px 10px 6px;
  }
  .sub-wrap > .button:after{
    display: none;
  }

  .sub-nav{
    position: static;
    display: block;
    background-color: transparent;
    border: none;
    padding: 0 36px

    /* hide the triangle */
  }

  .sub-nav:before, .sub-nav:after{
    display: none;
  }

  .sub-nav > .title{
    display: none;
  }

  .sub-nav > .link{
    margin: 6px 0;
  }

  .site-footer{
    padding: 0
  }

  .site-footer > .link{
    display: block;
  }
}

.center {
  text-align: center;
}

/******************************************************
  site footer
******************************************************/

.site-footer{
  padding: 16px;
  margin: 80px 0 30px;
  text-align: center;
  font-size: 14px
}

.site-footer > .link{
  margin: 0 12px;
  font-weight: 400;
}

/******************************************************
  package list
******************************************************/

.package-list{
  padding: 0;
  margin: 0;
  list-style: none;
}

.list-item{
  border-top: 1px solid #eee;
  padding: 4px 8px
}

.list-item:last-child{
  border-bottom: 1px solid #eee;
}

.list-item:hover{
  background: #fafafa;
}

.list-item > .title{
  font-weight: 600;
  font-size: 16px;
  margin: 0;
}

.list-item > .description{
  font-size: 14px;
  line-height: 1.3;
  color: rgba(0, 0, 0, .87);
  margin: 0;
}

.list-item > .metadata{
  font-size: 12px;
  margin: 8px 0 0;
}

.list-item.-simple > .metadata > .package-tag:first-of-type{
  margin-left: 0;
}

.score-box{
  float: right;
  margin: 8px;
  text-align: center;
  width: 36px;
}

.score-box > .number {
  display: block;
  border-radius: 50%;
  width: 28px;
  height: 28px;
  line-height: 28px;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  font-weight: 500;
}

.score-box > .number.-solid {
  background: #0075c9;
}

.score-box > .number.-good {
  background: #00c4b3;
}

.score-box > .number.-rotten {
  background: #bb2400;
}

.score-box > .number.-missing {
  background: #ccc;
}


.score-box > .text{
  font-size: 14px;
  color: #333;
}

.package-tag {
  background: #eef9fe;
  text-transform: uppercase;
  display: inline-block;
  font-size: 12px;
  font-weight: 500;
  color: #555;
  padding: 2px 8px;
  margin: 6px 0 4px 4px;
}

.package-tag.missing {
  background: #f0f0f0;
}

.package-tag.unidentified {
  background: #fff0f0;
}

/******************************************************
  home page
******************************************************/


.home-banner{
  text-align: center;
  padding: 40px 20px
}


.home-banner > .logo{
  width: 100%;
  max-width: 520px
}


.home-banner > .text{
  margin: 1em auto;
  max-width: 500px
}


.home-banner > .link{
  text-transform: uppercase;
  display: inline-block;
  margin: 0 16px;
  font-weight: 500;
  font-size: 14px
}


.home-banner > .link:after{
  content: ' >'
}


.home-banner > .search-bar{
  margin: 0 auto 24px
}


@media screen and (max-width: 600px) {
  .home-banner > .link{
    display: block;
    margin: 4px;
  }
}


.home-lists-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-direction: column;
  max-width: 1100px;
  margin-top: 20px;
}

.home-lists-container .more {
  text-align: center;
  margin-top: 10px;
}

.home-lists-container .package-list {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
}

.home-lists-container .package-list .list-item {
  width: 305px;
  margin: 0 5px;
}

.home-lists-container .package-list .list-item:last-child {
  border-bottom: inherit;
}
/* ... */

